# archetypes

./: .gitignore  AGENTS.md  AURA Archetype Expansion Project.txt  Archetype Profile for Claude the Scribe.txt  Archetypes of AURA final.txt  CLAUDE.md  Cargo.toml  PROTOCOL.md  README.md  STATUS.md
.cursor/rules/: desktop-launcher-surface.mdc  verify-downstream-pipeline.mdc
artifacts/: engine-crash-stderr.txt  engine-debug-named-stderr.txt  engine-fix-stderr.txt  engine-release-ok-stderr.txt  engine-release-retest-stderr.txt  engine-retest-stderr.txt  engine-turn2-stderr.txt
crates/engine/: Cargo.toml
crates/engine/src/: main.rs
crates/engine/src/chamber/: boot.rs  camera.rs  council.rs  interior.rs  merkaba.rs  mod.rs  panels.rs  portal.rs  ritual.rs  sky.rs  speech.rs  spheres.rs  star.rs
crates/engine/src/modes/: difficulty.rs  game_mode.rs  mod.rs
crates/engine/src/modes/inner_chambers/: camera.rs  extraction.rs  mod.rs  world.rs
crates/engine/src/modes/oracle_riddle/: mod.rs  scoring.rs  ui.rs
crates/engine/src/modes/standard_mecha/: mod.rs
crates/engine/src/services/: chronos.rs  ledger.rs  llm.rs  mod.rs  paths.rs  readiness.rs
crates/engine/src/theme/: constants.rs  mod.rs
crates/launcher/: Cargo.toml  build.rs
crates/launcher/src/: main.rs
scripts/: author_council_chamber.py  author_lore_chamber.py  author_temple_overhaul.py  dependencies.json  install_shortcut.ps1  make_avatars.py  prepare_blender_chamber.py  prepare_loading_video.py  prepare_table.py  refine_temple_void.py  setup_windows.ps1
src/: main.rs
(+81 files in other folders)
