[package]
name = "engine"
version = "0.1.0"
edition = "2021"

[dependencies]
bevy = { version = "0.18.1", features = ["wav", "jpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.11.0"
ureq = { version = "2.12", features = ["json"] }

[build-dependencies]
winres = "0.1"
