[package]
name = "launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
blake3 = "1"
ed25519-dalek = "2"
getrandom = "0.2"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2.12", features = ["json"] }
uuid = { version = "1", features = ["serde", "v4"] }

[build-dependencies]
winres = "0.1"
